updated frontmatter on all CMS-related files

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,52 +28,52 @@ nav:
       - Overview: architecture/platform-architecture.md
 
   - Engineering Projects:
-
-      - CMS Platform:
-
-          - Overview: projects/cms-platform/index.md
+      - unstructured-framemaker-dita/unstructured-framemaker-to-dita.md
+      - CMS Platform: 
+          - projects/cms-platform/cms-platform-overview.md
+          - projects/cms-platform/cms-architecture.md
 
           - Power App Architecture:
-              - Knowledge Manager Overview: projects/cms-platform/power-app-design/PowerApp_Standalone_DesignDoc.md
+              - projects/cms-platform/power-app-design/PowerApp_Standalone_DesignDoc.md
               - Feature Modules:
-                  - App Startup, Architecture, and UI Logic: projects/cms-platform/power-app-design/power-app-features/ScreenBreakdownAndLogic.md
-                  - Delegable Filtering & Searching: projects/cms-platform/power-app-design/power-app-features/DelegableFilteringAndSearching.md
-                  - Article Versioning: projects/cms-platform/power-app-design/power-app-features/ArticleVersioningFeature.md
-                  - Archive History Management: projects/cms-platform/power-app-design/power-app-features/ArchivedHistoryManagement.md
-                  - Generic UI Components: projects/cms-platform/power-app-design/power-app-features/GenericUIComponents.md
-                  - UI/UX Best Practices: projects/cms-platform/power-app-design/power-app-features/UIUXBestPractices.md
-                  - Troubleshooting & Key Fixes: projects/cms-platform/power-app-design/power-app-features/TroubleshootingAndKeyFixes.md
-                  - Advanced Troubleshooting: projects/cms-platform/power-app-design/power-app-features/AdvancedTroubleshooting.md
+                  - projects/cms-platform/power-app-design/power-app-features/ScreenBreakdownAndLogic.md
+                  - projects/cms-platform/power-app-design/power-app-features/DelegableFilteringAndSearching.md
+                  - projects/cms-platform/power-app-design/power-app-features/ArticleVersioningFeature.md
+                  - projects/cms-platform/power-app-design/power-app-features/ArchivedHistoryManagement.md
+                  - projects/cms-platform/power-app-design/power-app-features/GenericUIComponents.md
+                  - projects/cms-platform/power-app-design/power-app-features/UIUXBestPractices.md
+                  - projects/cms-platform/power-app-design/power-app-features/TroubleshootingAndKeyFixes.md
+                  - projects/cms-platform/power-app-design/power-app-features/AdvancedTroubleshooting.md
 
           - Power Automate Flows:
-              - Create New Article Version: projects/cms-platform/power-automate-flows/flow-designs/Instant_-_Create_New_Article_Version.md
-              - Discard Draft: projects/cms-platform/power-automate-flows/flow-designs/Instant_-_Discard_Article_Draft.md
-              - Article Archive Feature: projects/cms-platform/power-automate-flows/flow-designs/Instant_-_Expire_Single_KB_Article_v2.md
-              - Manage SME Approval: projects/cms-platform/power-automate-flows/flow-designs/Instant_-_Manage_SME_Approval.md
-              - Reactivate Archived Article: projects/cms-platform/power-automate-flows/flow-designs/Instant_-_Reactivate_Archived_Article.md
-              - Revert to Version: projects/cms-platform/power-automate-flows/flow-designs/Instant_-_Revert_to_Version.md
-              - Start KB Approval: projects/cms-platform/power-automate-flows/flow-designs/Instant_-_Start_KB_Article_Approval.md
-              - KB API Endpoint: projects/cms-platform/power-automate-flows/flow-designs/KB-API-Endpoint.md
-              - KB ID Generator: projects/cms-platform/power-automate-flows/flow-designs/KB_ID_Generator_Child.md
-              - Log Audit Event: projects/cms-platform/power-automate-flows/flow-designs/LogAuditEvent_designDoc.md
-              - Log System Event: projects/cms-platform/power-automate-flows/flow-designs/LogSystemEvent_designDoc.md
-              - Notify Stripped Character: projects/cms-platform/power-automate-flows/flow-designs/Notify-StrippedCharacter.md
-              - Orchestrate Generate Alt Text: projects/cms-platform/power-automate-flows/flow-designs/Orchestrate-GenerateAltTextAndSaveArticle.md
-              - Scheduled Unassigned Reminder: projects/cms-platform/power-automate-flows/flow-designs/Scheduled_-_Unassigned_Article_Reminder.md
+              - projects/cms-platform/power-automate-flows/flow-designs/Instant_-_Create_New_Article_Version.md
+              - projects/cms-platform/power-automate-flows/flow-designs/Instant_-_Discard_Article_Draft.md
+              - projects/cms-platform/power-automate-flows/flow-designs/Instant_-_Expire_Single_KB_Article_v2.md
+              - projects/cms-platform/power-automate-flows/flow-designs/Instant_-_Manage_SME_Approval.md
+              - projects/cms-platform/power-automate-flows/flow-designs/Instant_-_Reactivate_Archived_Article.md
+              - projects/cms-platform/power-automate-flows/flow-designs/Instant_-_Revert_to_Version.md
+              - projects/cms-platform/power-automate-flows/flow-designs/Instant_-_Start_KB_Article_Approval.md
+              - projects/cms-platform/power-automate-flows/flow-designs/KB-API-Endpoint.md
+              - projects/cms-platform/power-automate-flows/flow-designs/KB_ID_Generator_Child.md
+              - projects/cms-platform/power-automate-flows/flow-designs/LogAuditEvent_designDoc.md
+              - projects/cms-platform/power-automate-flows/flow-designs/LogSystemEvent_designDoc.md
+              - projects/cms-platform/power-automate-flows/flow-designs/Notify-StrippedCharacter.md
+              - projects/cms-platform/power-automate-flows/flow-designs/Orchestrate-GenerateAltTextAndSaveArticle.md
+              - projects/cms-platform/power-automate-flows/flow-designs/Scheduled_-_Unassigned_Article_Reminder.md
 
           - GitHub Publishing:
-              - GitHub KB Article Publishing Workflow: projects/cms-platform/github-pipeline/github-architecture.md
+              - projects/cms-platform/github-pipeline/github-architecture.md
               - Pipeline Design:
-                 - Main Dispatcher Workflow: projects/cms-platform/github-pipeline/elixir-kbarticle-dispatcher.md
-                 - Reusable Repository Processing: projects/cms-platform/github-pipeline/process-kb-repo.md
-                 - Reusable Publication Worker: projects/cms-platform/github-pipeline/elixir-kbarticle-publish-worker.md
-                 - Reusable Summary & Sync: projects/cms-platform/github-pipeline/reusable-summarize-and-sync.md
-                 - AI Ingestion - MET File Generation: projects/cms-platform/github-pipeline/create-kb-met.md
+                 - projects/cms-platform/github-pipeline/elixir-kbarticle-dispatcher.md
+                 - projects/cms-platform/github-pipeline/process-kb-repo.md
+                 - projects/cms-platform/github-pipeline/elixir-kbarticle-publish-worker.md
+                 - projects/cms-platform/github-pipeline/reusable-summarize-and-sync.md
+                 - projects/cms-platform/github-pipeline/create-kb-met.md
 
   - Documentation Pipelines:
      - Pipeline Overview: pipelines/pipeline-overview.md
      - CI/CD Workflows:
-        - Automatic File Validation: pipelines/automatic-validation/elixir-automatic-file-validation.md
+        - pipelines/automatic-validation/elixir-automatic-file-validation.md
         - Scheduled External Link Validator: pipelines/external-link-validation/external-link-check.md
         - Automatic Workflow Sync Across Organization: pipelines/automatic-workflow-sync/sync-workflows.md
      - Automation Scripts:
@@ -81,5 +81,5 @@ nav:
         - HTML File Renaming: pipelines/automatic-validation/file-rename.md
         - Create Metadata Files: pipelines/create-metadata-files/create-met-go.md
         - Create RSS Feed: pipelines/create-rss/create-rss.md
-        - Standalone Guide Generator: pipelines/standalone-guide-generator/standalone-guide-reference-processor.md
+        - pipelines/standalone-guide-generator/standalone-guide-reference-processor.md
 
